--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Open Purchase Orders
+title: Chart of Account Tree
 author: Finnur Bragason
 email: fbragason@outlook.com
 description: > # this means to ignore newlines until "aux_links:"
