--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coa-tree",
   "version": "1.0.0",
-  "description": "Chart of Account",
+  "description": "Chart of Accounts",
   "main": "home.ts",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
